Fix contrast ratio of link hover states in index.scss

--- a/client/src/index.scss
+++ b/client/src/index.scss
@@ -167,7 +167,7 @@ a:focus {
   transition: color 0.15s ease-in-out;
 
   &:hover {
-    color: var(--clr-primary);
+    color: var(--clr-primary-darker);
     text-decoration: underline;
   }
 }
